<resources>
    <string name="app_name">Zap</string>
    <string name="facebook_app_id">838256642987436</string>

    <!-- Menu strings -->
    <string name="logout">Log Out</string>
    <string name="delete">Delete Event</string>

    <!-- Loading Activity strings -->
    <string name="loader_title">Loading</string>
    <string name="loader_text">Logging in</string>
    <string name="title_activity_login">Login</string>

    <!-- Main Activity strings -->
    <string name="available">AVAILABLE</string>
    <string name="unavailable">UNAVAILABLE</string>
    <string name="activity">(Optional) I want to:</string>
    <string name="title_activity_main">Zap</string>
    <string name="action_settings">Settings</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_home">Home</string>
    <string name="tab_events">Events</string>
    <string name="no_events">No Events Available</string>
    <string name="no_friends">You Have No Friends</string>

    <!-- Event Details Activity strings -->
    <string name="yes">YES</string>
    <string name="maybe">MAYBE</string>
    <string name="cant">CAN\'T</string>
    <string name="other_members">Other Members:</string>
    <string name="start_time">At </string>
    <string name="end_time">Expires at </string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="event_details_loader_title">Deleting</string>
    <string name="event_details_loader_text">Deleting event, please wait</string>

    <!-- Create Event Activity strings -->
    <string name="heading">New Event</string>
    <string name="new_title">Title:</string>
    <string name="new_description">Description:</string>
    <string name="new_start_time">Start Time:</string>
    <string name="new_end_time">End Time:</string>
    <string name="new_submit">Submit</string>
    <string name="no_title">You must enter a title</string>
    <string name="title_activity_create_event">New Event</string>
    <string name="create_event_loader_title">Creating</string>
    <string name="create_event_loader_text">Creating event, please wait</string>

</resources>
